--- a/src/Account Componenets/SignUp/BusinessSignUp.module.css
+++ b/src/Account Componenets/SignUp/BusinessSignUp.module.css
@@ -11,7 +11,7 @@
 }
 
 .container.darkTheme {
-  background: rgb(0, 0, 0); /* Matches Sheets dark theme background */
+  /* background: rgb(0, 0, 0); */
 }
 
 .header {
@@ -27,7 +27,7 @@
 }
 
 .subText.darkTheme {
-  color: rgb(142, 142, 147); /* Dark theme text */
+  /* color: rgb(142, 142, 147); */
 }
 
 .logo {
@@ -44,7 +44,7 @@ h2 {
 }
 
 h2.darkTheme {
-  color: rgb(235, 235, 245); /* Dark theme text */
+  /* color: rgb(235, 235, 245); */
 }
 
 p {
@@ -54,7 +54,7 @@ p {
 }
 
 p.darkTheme {
-  color: rgb(142, 142, 147); /* Dark theme text */
+  /* color: rgb(142, 142, 147); */
 }
 
 .form {
@@ -82,7 +82,7 @@ p.darkTheme {
 }
 
 .label.darkTheme {
-  color: rgb(142, 142, 147); /* Dark theme label */
+  /* color: rgb(142, 142, 147);  */
 }
 
 .inputField {
@@ -101,9 +101,7 @@ p.darkTheme {
 }
 
 .inputField.darkTheme {
-  border: 1px solid rgba(255, 255, 255, 0.1); /* Dark theme border */
-  background: rgba(58, 58, 60, 0.9); /* Dark theme input background */
-  color: rgb(235, 235, 245); /* Dark theme text */
+  
 }
 
 .inputField:focus {
@@ -113,9 +111,6 @@ p.darkTheme {
 }
 
 .inputField.darkTheme:focus {
-  border: 1px solid #0A84FF; /* Dark theme focus border */
-  background: rgba(72, 72, 74, 0.95);
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
 }
 
 .focused {
@@ -126,7 +121,7 @@ p.darkTheme {
 }
 
 .focused.darkTheme {
-  color: #0A84FF; /* Dark theme focused label */
+  
 }
 
 .submitButton {
@@ -146,7 +141,7 @@ p.darkTheme {
 }
 
 .submitButton.darkTheme {
-  background: rgba(10, 132, 255, 0.95); /* Dark theme button background */
+
 }
 
 .submitButton:hover {
@@ -154,7 +149,7 @@ p.darkTheme {
 }
 
 .submitButton.darkTheme:hover {
-  background: rgba(10, 132, 255, 0.8); /* Dark theme hover */
+
 }
 
 .submitButton:disabled {
@@ -163,7 +158,7 @@ p.darkTheme {
 }
 
 .submitButton.darkTheme:disabled {
-  background: rgba(255, 255, 255, 0.1);
+
 }
 
 .logoText {
@@ -182,7 +177,7 @@ p.darkTheme {
 }
 
 .logoText.darkTheme {
-  color: rgb(235, 235, 245); /* Dark theme text */
+
 }
 
 .title {
@@ -197,7 +192,7 @@ p.darkTheme {
 }
 
 .title.darkTheme {
-  color: rgb(235, 235, 245); /* Dark theme text */
+
 }
 
 .successMessage {
@@ -208,7 +203,7 @@ p.darkTheme {
 }
 
 .successMessage.darkTheme {
-  color: #0A84FF; /* Dark theme success */
+
 }
 
 .footer {
@@ -219,7 +214,7 @@ p.darkTheme {
 }
 
 .footer.darkTheme {
-  color: rgb(142, 142, 147); /* Dark theme text */
+
 }
 
 .footer a {
@@ -231,7 +226,7 @@ p.darkTheme {
 }
 
 .footer a.darkTheme {
-  color: #0A84FF; /* Dark theme link */
+
 }
 
 .footer a:hover {
@@ -243,7 +238,7 @@ p.darkTheme {
 }
 
 .error .inputField.darkTheme {
-  border-color: #ff453a; /* Dark theme error */
+
 }
 
 .errorText {
@@ -252,7 +247,7 @@ p.darkTheme {
 }
 
 .errorText.darkTheme {
-  color: #ff453a; /* Dark theme error text */
+
 }
 
 .eyeIcons {
@@ -268,7 +263,7 @@ p.darkTheme {
 }
 
 .eyeIcons.darkTheme {
-  color: rgb(142, 142, 147); /* Dark theme icon */
+
 }
 
 .eyeIcons:hover {
@@ -276,7 +271,7 @@ p.darkTheme {
 }
 
 .eyeIcons.darkTheme:hover {
-  color: #0A84FF; /* Dark theme hover */
+
 }
 
 .requirementsList {
@@ -292,7 +287,7 @@ p.darkTheme {
 }
 
 .requirementsText.darkTheme {
-  color: #ff453a; /* Dark theme error */
+
 }
 
 .spinner {
