--- a/src/Account Componenets/SignIn/SignIn.module.css
+++ b/src/Account Componenets/SignIn/SignIn.module.css
@@ -7,6 +7,7 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     box-sizing: border-box;
     z-index: 1300;
+    height: 100vh;
 }
 
 .header {
@@ -124,6 +125,7 @@ p {
 
 .footer {
     margin-top: 20px;
+    padding-bottom: 20px;
     font-size: 14px;
     color: #555;
 }
